# dawn

./: .clang-tidy  .gdbinit  .gitignore  .gitmodules  .lldbinit  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  cfg_algorithms.cc  main.cc
benchmarks/src/: main.cc
cmake/: dev-mode.cmake  docs.cmake  format-targets.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  target-config.cmake  variables.cmake
dawn/: adt.h  config.h  dawn.h  ir.h  utility.h
dawn/adt/: deep_hash_table.h  deep_hash_table.test.cc  optional_ptr.h  value_table.h
dawn/adt/internal/: cached_hash.h
dawn/analysis/: analyses.h  analysis_manager.cc  analysis_manager.h  analysis_passes.cc  analysis_passes.h  cfg_analysis.cc  cfg_analysis.h  cfg_analysis.test.cc  cfg_edges.cc  cfg_edges.h
dawn/ir/: basic_block.cc  basic_block.h  constant.cc  constant.h  constant.test.cc  function.cc  function.h  inst_visitor.cc  inst_visitor.h  instruction.cc  instruction.h  instruction.test.cc  instructions.cc  instructions.h  instructions.test.cc  ir_builder.cc  ir_builder.h  ir_reader.cc  ir_reader.h  ir_writer.cc  ir_writer.h  matching.h  module.cc  module.h  module.test.cc  types.cc  types.h  types.test.cc  value.h
dawn/ir/internal/: constant_pool.cc  constant_pool.h  function_manager.cc  function_manager.h  instruction_manager.cc  instruction_manager.h  string_pool.cc  string_pool.h  type_manager.cc  type_manager.h  type_manager.test.cc
dawn/passes/: pass.cc  pass.h
dawn/utility/: apint.cc  apint.h  apint.test.cc  assertions.cc  assertions.h  assertions.test.cc  bump_alloc.h  deref_hashable.h  file.cc  file.h  rtti.h  strong_types.h  traits.h  version.cc  version.h
dawn/vm/: interpret.cc  interpret.h  stack.cc  stack.h  vm.cc  vm.h
docs/: Doxyfile.in
examples/: CMakeLists.txt
include/dawn/: adt.h  config.h  dawn.h  ir.h  utility.h
include/dawn/config/: version.h
include/dawn/ir/: constant.h  instruction.h  instructions.h  module.h  types.h  value.h
include/dawn/ir/internal/: type_manager.h
include/dawn/utility/: assertions.h  bump_alloc.h  rtti.h
lib/: CMakeLists.txt  bad.cc
lib/config/: version.cc
lib/ir/: types.cc  types.test.cc
lib/utility/: assertions.cc
scripts/gdb/: absl_pretty_printers.py
scripts/lldb/: absl_pretty_printers.py  pretty_printers.py  std_pretty_printers.py
tests/: CMakeLists.txt  sanity.cc
tests/cases/: one.dai
tests/helpers/: implements_value_interface.h  random.cc  random.h  sample_programs.cc  sample_programs.h
tests/src/: sanity.cc
tools/: CMakeLists.txt
tools/dawncc/: CMakeLists.txt
tools/dawncc/src/: main.cc
tools/dawnic/: CMakeLists.txt
tools/dawnic/src/: main.cc
tools/dawnii/: CMakeLists.txt
tools/dawnii/src/: main.cc
